--- a/aaa.html
+++ b/aaa.html
@@ -1,25 +1,34 @@
 <head>
   <title>German-ator++</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Vollkorn:400italic,400' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
+  <div class='bg'></div>
 	<div class='container'>
   	{{> form}}
-  	{{> thumbs}}
 	</div>
 </body>
 
 <template name="form">
   <form class="form-signin">
-    <h2 class="form-signin-heading">German-ator++</h2>
-    <h3>{{word.english}}</h3>
-    <input type="text" class="form-control arriba" id='word' placeholder="Word" autofocus="">
-    <input type="text" class="form-control abajo" id='plural' placeholder="Plural">
-    <div>
-	    <button class="btn btn-large btn-success check" type="submit">check</button>
-	    <button class="btn btn-large pass">pass</button>
-	  </div>
+    <div class="flipcard front">
+      <h2 class="form-signin-heading">German-ator++</h2>
+      <h3>{{word.english}}</h3>
+      <input type="text" class="form-control arriba" id='word' placeholder="Word" autofocus="">
+      <input type="text" class="form-control abajo" id='plural' placeholder="Plural">
+      <button class="btn btn-large btn-primary i-know-it">I know it</button>
+      <div class='pull-right'>
+  	    <button class="btn btn-large btn-success check" type="submit">check</button>
+  	    <button class="btn btn-large pass">pass</button>
+  	  </div>
+    </div>
+    <div class="flipcard back">
+      hola, estoy attras <br/>
+      <button class="btn btn-large btn-primary i-know-it">back</button>
+    </div>
   </form>
 </template>
 
