--- a/template.html
+++ b/template.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <div class='bg'></div>
+  {{> bg}}
 	<div class='container'>
   	{{> form}}
 	</div>
@@ -17,7 +17,7 @@
     <div class="flipcard front">
       <h2 class="form-signin-heading">German-ator++</h2>
       <h3>{{word.english}}</h3>
-      <input type="text" class="form-control arriba" id='word' placeholder="Word" autofocus="">
+      <input type="text" class="form-control arriba" id='word' placeholder="Word">
       <input type="text" class="form-control abajo" id='plural' placeholder="Plural">
       <button class="btn btn-large btn-primary i-know-it">I know it</button>
       <div class='pull-right'>
@@ -35,6 +35,10 @@
     </div>
   </form>
   <audio src="http://www.ispeech.org/p/generic/getaudio?text={{audio}}&voice=eurgermanfemale&speed=0&action=convert"></audio>
+</template>
+
+<template name="bg">
+  <div class='bg'></div>
 </template>
 
 <template name="thumbs">
