changes in names

--- a/template.html
+++ b/template.html
@@ -15,7 +15,7 @@
 <template name="form">
   <form class="form-signin">
     <div class="flipcard front">
-      <h2 class="form-signin-heading">German-ator++</h2>
+      <!-- <h2 class="form-signin-heading">German-ator++</h2> -->
       <h3>{{word.english}}</h3>
       <input type="text" class="form-control arriba" id='word' placeholder="Word">
       <input type="text" class="form-control abajo" id='plural' placeholder="Plural">
