--- a/template.html
+++ b/template.html
@@ -6,11 +6,42 @@
 </head>
 
 <body>
-  {{> bg}}
-	<div class='container'>
-  	{{> form}}
-	</div>
+  {{> sidebar}}
+  <div id='content' class="snap-content" style="background-image:url({{imgurl}})">
+    {{> bg}}
+    {{> list}}
+  	<div class='container'>
+    	{{> form}}
+  	</div>
+  </div>
 </body>
+
+<template name="sidebar">
+  <div class="snap-drawers">
+    <nav class="snap-drawer snap-drawer-left">
+      <ul class='list' id='menu'>
+        <li><a href='#'>Simple Present</a></li>
+        <li><a href='#'>Simple Past</a></li>
+        <li><a href='#'>Present Perfect</a></li>
+        <li><a href='#'>Past Perfekt</a></li>
+        <li><a href='#'>Simple Futur</a></li>
+        <li><a href='#'>Futur Perfect</a></li>
+      </ul>
+      <ul class='list' id='menu-type'>
+        <li>
+          <div class=''>WORD</div>
+          <div class=''>VERB</div>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</template>
+
+<template name="list">
+  <div id="list">
+    HOLAAAAAAAAA
+  </div>
+</template>
 
 <template name="form">
   <form class="form-signin">
