--- a/template.list.html
+++ b/template.list.html
@@ -42,7 +42,7 @@
 </template>
 
 <template name="list">
-  <div id="list" class="show">
+  <div id="list" class="">
     {{> new}}
     {{#constant}}
     <form class="form-search">
