--- a/template.sidebar.html
+++ b/template.sidebar.html
@@ -2,17 +2,15 @@
   <div class="snap-drawers">
     <nav class="snap-drawer snap-drawer-left">
       <ul class='list' id='menu'>
-        <li id='show-list'><a href='#'>Show/Hide word list</a></li>
-        <li><a href='#'>Simple Past</a></li>
-        <li><a href='#'>Present Perfect</a></li>
-        <li><a href='#'>Past Perfekt</a></li>
-        <li><a href='#'>Simple Futur</a></li>
-        <li><a href='#'>Futur Perfect</a></li>
+        <li id='show-list'><a href='#'><i class='icon-white icon-tags'></i> Show word list</a></li>
+        <li><a href='#'><i class='icon-white icon-signal'></i> Stats</a></li>
+        <li><a href='#'><i class='icon-white icon-cog'></i> Configuration</a></li>
+        <li><a href='#'><i class='icon-white icon-question-sign'></i> About</a></li>
       </ul>
       <ul class='list' id='menu-type'>
         <li>
-          <div class=''>WORD</div>
-          <div class=''>VERB</div>
+          <div class=''>A1</div>
+          <div class=''>A2</div>
         </li>
       </ul>
     </nav>
